# cortex

./: .env.example  CLAUDE.md  README.md  docker-compose.yml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: deploy.yml
core/: cache.py  chunker.py  code_graph.py  formatters.py  global_graph.py  graph.py  roslyn_analyzer.py
core/roslyn_tool/: CortexAnalyzer.csproj  Program.cs
eval/: baselines.json  golden.json  harvest.py  run.py
hooks/: session-start.js
indexer/: Dockerfile  cache.py  chunker.py  code_graph.py  global_graph.py  graph.py  index.py  index.sh  index_code.py  notes_graph.py  requirements.txt
local/: README.md  pyproject.toml
local/cortex/: cli.py  config.py  embedder.py  indexer.py  mcp_server.py  state.py  watcher.py
local/cortex/core/: chunker.py  notes_graph.py
mcp/: Dockerfile  config.py  oauth.py  onboarding.py  reindex.py  requirements.txt  routes.py  server.py  state.py  template.py  tools.py  watcher.py  web_ui.py
server/indexer/: Dockerfile  code_graph.py  index.py  index_code.py  notes_graph.py  requirements.txt
server/mcp/: Dockerfile  config.py  middleware.py  oauth.py  reindex.py  repos.py  requirements-ts.txt  requirements.txt  routes.py  server.py  state.py  template.py  tools.py  tools_admin.py  tools_search.py
skills/cortex-index/: SKILL.md
skills/cortex-search/: SKILL.md
skills/cortex-setup/: SKILL.md
