[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-local"
version = "2.0.8"
description = "Local semantic search MCP server — notes + code, embedded Qdrant, fastembed"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "qdrant-client>=1.17.0",
    "fastembed>=0.4.0",
    "click>=8.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
legacy = ["numpy==1.26.4"]

[project.scripts]
cortex = "cortex.cli:cli"

[project.entry-points."mcp.servers"]
cortex = "cortex.mcp_server:run"

[tool.hatch.build.targets.wheel]
packages = ["cortex"]
